# ExtremeQualityImagingDemo

./: .gitignore  CMakeLists.txt  README.md  appevent.cpp  appevent.h  appinit.cpp  appinit.h  connx.cpp  connx.h  ctoupcamera.cpp  ctoupcamera.h  cusbcamera.cpp  cusbcamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
include/: appevent.h  appinit.h  ccamera.h  connx.h  connxbase.h  connxfacepaint.h  connxnaf.h  cthread.h  ctoupcamera.h  cusbcamera.h  mainwindow.h
src/: appevent.cpp  appinit.cpp  ccamera.cpp  connx.cpp  connxbase.cpp  connxfacepaint.cpp  connxnaf.cpp  cthread.cpp  ctoupcamera.cpp  cusbcamera.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
